--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
                 </ul>
             </nav>
         </header>
+        <h1>Games</h1>
+        <img src="tictactoe.png" alt="Tic Tac Toe" class="image">
+        <!--add more-->
     </body>
 </html>
