--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
                 <ul class="header">
                     <a class="navbar" href="index.html">Home</a>
                     <a class="navbar" href="tictactoe.html">Tic Tac Toe</a>
-                    <a class="navbar" href="connect4.html">Connect Four</a>
-                    <a class="navbar" href="memory.html">Memory Games</a> <!--might change-->
+                    <a class="navbar" href="rps.html">Rock Paper Scissors</a>
+                    <a class="navbar" href="memory.html">Memory</a> <!--might change-->
+                    <!-- <a class="navbar" href="snake.html">Snake</a> -->
                 </ul>
             </nav>
         </header>
         <h1>Games</h1>
         <img src="tictactoe.png" alt="Tic Tac Toe" class="image">
+        <img src="rps.png" alt="Rock Paper Scissors" class="image"> 
+        <img src="memory.png" alt="Memory" class="image">
         <!--add more-->
     </body>
 </html>
