--- a/tictactoe.html
+++ b/tictactoe.html
@@ -14,7 +14,7 @@
                     <a class="navbar" href="index.html">Home</a>
                     <a class="navbar" href="tictactoe.html">Tic Tac Toe</a>
                     <a class="navbar" href="rps.html">Rock Paper Scissors</a>
-                    <a class="navbar" href="memory.html">Memory Games</a> <!--might change-->
+                    <a class="navbar" href="memory.html">Memory</a> <!--might change-->
                 </ul>
             </nav>
         </header>
@@ -36,3 +36,4 @@
         </div>
     </body>
 </html>
+
