--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                     <a class="navbar" href="index.html">Home</a>
                     <a class="navbar" href="tictactoe.html">Tic Tac Toe</a>
                     <a class="navbar" href="rps.html">Rock Paper Scissors</a>
-                    <a class="navbar" href="memory.html">Memory</a> <!--might change-->
-                    <!-- <a class="navbar" href="snake.html">Snake</a> -->
+                    <a class="navbar" href="memory.html">Memory</a> 
+                    <a class="navbar" href="snake.html">Snake</a>
                 </ul>
             </nav>
         </header>
@@ -21,6 +21,7 @@
         <img src="tictactoe.png" alt="Tic Tac Toe" class="image">
         <img src="rps.png" alt="Rock Paper Scissors" class="image"> 
         <img src="memory.png" alt="Memory" class="image">
+        <img src="snake.png" alt="Snake" class="image">
         <!--add more-->
     </body>
 </html>
