--- a/snake.html
+++ b/snake.html
@@ -22,7 +22,9 @@
         </h1>
         <div class="game-container">
         <div class="score-display">Score: <span id="score">0</span></div>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <canvas class="game-board" id="gameCanvas" width="400" height="400"></canvas>
+        <br>
+        <button onclick="startGame()" class="restart-btn">Restart</button>
     </div>
     <script src="snake.js"></script>
     </body>
