--- a/memory.html
+++ b/memory.html
@@ -15,7 +15,8 @@
                     <a class="navbar" href="index.html">Home</a>
                     <a class="navbar" href="tictactoe.html">Tic Tac Toe</a>
                     <a class="navbar" href="rps.html">Rock Paper Scissors</a>
-                    <a class="navbar" href="memory.html">Memory</a> <!--might change-->
+                    <a class="navbar" href="memory.html">Memory</a>
+                    <a class="navbar" href="snake.html">Snake</a>
                 </ul>
             </nav>
         </header>
@@ -29,5 +30,7 @@
             </div>
             <button class="button" id="restartButton">Restart Game</button>
         </div>
+        <br>
+        <h1></h1>
     </body>
 </html>
