--- a/rps.html
+++ b/rps.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rock Paper Scissors</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href=""/> <!--need to change-->
+    <link rel="icon" href="https://media.istockphoto.com/id/1269211670/vector/rock-paper-scissors-body-parts-icon-set.jpg?s=612x612&w=0&k=20&c=OSu0AGUV7Tq3-gotwwOywCRcv4OMrt7KqQMhI_tPZOw="/> <!--need to change-->
     <script src="script.js" defer></script>
     </head>
     <body>
@@ -13,7 +13,8 @@
                     <a class="navbar" href="index.html">Home</a>
                     <a class="navbar" href="tictactoe.html">Tic Tac Toe</a>
                     <a class="navbar" href="rps.html">Rock Paper Scissors</a>
-                    <a class="navbar" href="memory.html">Memory Games</a> <!--might change-->
+                    <a class="navbar" href="memory.html">Memory</a> 
+                    <a class="navbar" href="snake.html">Snake</a>
                 </ul>
             </nav>
         </header>
